<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_awards"
        android:icon="@drawable/awards"
        android:title="@string/title_awards" />

    <item
        android:id="@+id/navigation_statistics"
        android:icon="@drawable/statistics"
        android:title="@string/title_statistics" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home"
        android:textColor="@color/white" />

    <item
        android:id="@+id/navigation_workouts"
        android:icon="@drawable/dumbbells"
        android:title="@string/title_workouts" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/settings"
        android:title="@string/title_settings" />
</menu>