<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.303">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_of_the_exercise" />

        <EditText
            android:id="@+id/exerciseInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:minHeight="48dp"
            tools:ignore="LabelFor,TextFields" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/number_of_reps" />

        <Spinner
            android:id="@+id/numberOfReps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:minHeight="48dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/number_of_sets" />

        <Spinner
            android:id="@+id/numberOfSets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:minHeight="48dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingEnd="10dp"
                tools:ignore="RtlSymmetry">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/difficulty_prompt">
                </TextView>

                <Spinner
                    android:id="@+id/difficulty_sp"
                    android:layout_width="match_parent"
                    android:layout_height="48dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/unit_reps_or_seconds">
                </TextView>

                <Spinner
                    android:id="@+id/unit"
                    android:layout_width="match_parent"
                    android:layout_height="48dp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weight_optional" />

        <Spinner
            android:id="@+id/weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/confirmExercise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:gravity="center"
            android:background="@drawable/background_color_selector_gray"
            android:layout_marginTop="20dp"
            android:text="@string/confirm"
            android:textAllCaps="false"
            tools:ignore="SpUsage" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>