<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background" >

    <Button
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/list_of_exercises"
        android:textAppearance="?android:textAppearanceLarge"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="5dp"
        android:paddingTop="0dp"
        android:gravity="center"
        android:background="@color/background"
        android:textAllCaps="false" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/difficulty_prompt">
                </TextView>

                <Spinner
                    android:id="@+id/difficulty_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="48dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/muscle_group">
                </TextView>

                <Spinner
                    android:id="@+id/group_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="48dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/equipment">
                </TextView>

                <Spinner
                    android:id="@+id/equipment_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="48dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/supported_by_the_device">
                </TextView>

                <Spinner
                    android:id="@+id/supported_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="48dp" />
            </LinearLayout>
        </LinearLayout>
    </HorizontalScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="460dp"
        android:layout_marginTop="8dp"
        android:id="@+id/layoutOfExercises"
        android:background="@drawable/border" >
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listOfExercises"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </FrameLayout>

</LinearLayout>